# cprogrammingnecatiergin

./: .gitignore
Odevler/: CMakeLists.txt  Makefile  cmake_install.cmake  futility.c  futility.h
Odevler/01_Sayi_Sistemleri/: ss_07.md
Odevler/01_Sayi_Sistemleri - Solutions/: ss_01.md  ss_02.md  ss_03.md  ss_04.md  ss_05.md  ss_06.md  ss_07.md
Odevler/02_Degisken_Bildirimleri/: bildirim_01.md  bildirim_02.md  bildirim_03.md
Odevler/02_Degisken_Bildirimleri - Solutions/: bildirim_01.md  bildirim_02.md  bildirim_03.md
Odevler/02_Sabitler - Solutions/: sb_01.md
Odevler/03_Fonksiyonlar/: printf_01.md  printf_02.md
Odevler/03_Fonksiyonlar - Solutions/: CMakeLists.txt  futility.c  futility.h  main.c  printf_01.md  printf_02.md
Odevler/04_Operatorler/: op_01_01.md  op_01_02.md  op_01_03.md  op_01_04.md  op_01_05.md  op_01_06.md  op_01_07.md  op_01_08.md  op_01_09.md  op_01_10.md  op_02.md  op_03.md  op_04.md  op_05.md  op_06.md  op_07.md  op_08.md  op_09.md
Odevler/04_Operatorler - Solutions/: op_01_01.md  op_01_02.md  op_01_03.md  op_01_04.md  op_01_05.md  op_01_06.md  op_01_07.md  op_01_08.md  op_01_09.md  op_01_10.md  op_02.md  op_03.md  op_04.md  op_05.md  op_06.md  op_07.md  op_08.md  op_09.md
Odevler/06_Kontrol_Deyimleri/: kd_13.md  kd_15.md  kd_16.md  kd_17.md
Odevler/06_Kontrol_Deyimleri - Solutions/: futility.c  futility.h  kd_01.c  kd_01.md  kd_02.c  kd_02.md  kd_03.c  kd_04.c  kd_04.md  kd_05.md  kd_06.c  kd_07.md  kd_08.c  kd_09.c  kd_10.c  kd_11.md  kd_12.md  kd_13.c  kd_13.md  kd_14.c  kd_15.md  kd_16.md  kd_17.md
Odevler/08_Kosul_Operatoru/: kop_01.md  kop_02.md  kop_03.md
Odevler/08_Kosul_Operatoru - Solutions/: kop_01.md  kop_02.md  kop_03.md
Odevler/09_Fonksiyon_Bildirimleri/: fb_01.md
Odevler/09_Fonksiyon_Bildirimleri - Solutions/: fb_01.md
Odevler/10_Onislemci - Solutions/: prp_01.md  prp_02.md  prp_03.md  prp_04.md
Odevler/14_Diziler/: dizi_02.md  dizi_04.md  dizi_07.md  dizi_08.md  dizi_09.md  dizi_10.md
Odevler/14_Diziler - Solutions/: dizi_01.md  dizi_02.md  dizi_04.md  dizi_05.md  dizi_06.md  dizi_07.md  dizi_08.md  dizi_09.md  dizi_10.md  dizi_11.md
Odevler/14_Diziler - Solutions/dizi_01/: CMakeLists.txt  dizi_01.c
Odevler/14_Diziler - Solutions/dizi_03/: CMakeLists.txt  dizi_03.c
Odevler/14_Diziler - Solutions/dizi_05/: CMakeLists.txt  dizi_05.c
Odevler/14_Diziler - Solutions/dizi_06/: CMakeLists.txt  dizi_06.c
Odevler/15_sizeof/: sizeof_01.md  sizeof_02.md  sizeof_03.md  sizeof_04.md
Odevler/15_sizeof - Solutions/: sizeof_01.md  sizeof_02.md  sizeof_03.md  sizeof_04.md
Odevler/20_Gostericiler/: ptr_01.md  ptr_02.md  ptr_03.md  ptr_04.md  ptr_05.md  ptr_06.md  ptr_07.md  ptr_09.md  ptr_10.md  ptr_11.md  ptr_12.md  ptr_13.md
Odevler/28_Fonksiyon_Gostericileri/: fp_01.md
Odevler/30_Dinamik_Bellek/: dinamik_01.md
Odevler/32_Ozyineleme/: rc_01.md  rc_02.md  rc_03.md  rc_04.md
Odevler/40_Yapilar/: st_01.md
Odevler/45_Komut_Satiri_Argumanlari/: ksa_01.md
Odevler/50_Bitsel_Islemler/: bit_01.md  bit_02.md  bit_03.md  bit_04.md  bit_05.md
Odevler/ders_odevleri/00_0_selftrial/: 00_0_selftrial.c  CMakeLists.txt
Odevler/ders_odevleri/12_1_roots/: 12. Ders 2.dereceden denklem cozumleri - Fatih Han Caglayan.c  Ders12roots.cbp  Ders12roots.depend  Ders12roots.layout
Odevler/ders_odevleri/12_2_uykucu/: 12.Ders uykucu odevi method1 - Fatih Han Caglayan.c  12.Ders uykucu odevi method2 - Fatih Han Caglayan.c  12.Ders uykucu.cbp  12.Ders uykucu.depend  12.Ders uykucu.layout  CMakeLists.txt
Odevler/ders_odevleri/21_1_linear_search_donald_knuth/: 21_1_linear_search_donald_knuth.c  CMakeLists.txt
Odevler/ders_odevleri/22_1_print_unique_array_elements/: 22_1_print_unique_array_elements.c  CMakeLists.txt
Odevler/ders_odevleri/22_2_vertical_histogram/: 22_2_vertical_histogram.c
Odevler/ders_odevleri/22_3_maximum_sub_array/: 22_3_maximum_sub_array_brute_force.c  22_3_maximum_sub_array_kadane.c  CMakeLists.txt
Odevler/ders_odevleri/22_4_linear_complexity_partitioning/: 22_4_linear_complexity_partitioning_first_solution.c  22_4_linear_complexity_partitioning_improved.c  CMakeLists.txt
Odevler/ders_odevleri/22_5_dutch_flag/: 22_5_dutch_flag_method_internet.c  22_5_dutch_flag_method_own.c  CMakeLists.txt
Odevler/ders_odevleri/23_1_palindrome/: 23_1_palindrome.c  CMakeLists.txt
Odevler/ders_odevleri/23_2_reverse_two_words/: 23_2_reverse_two_words.c  CMakeLists.txt
Odevler/ders_odevleri/23_3_anagram/: 23_3_anagram.c  CMakeLists.txt
Odevler/ders_odevleri/28_1_mystrstr/: 28_1_mystrstr.c  CMakeLists.txt
Odevler/ders_odevleri/30_1_is_all_chars_unique/: 30_1_is_all_chars_unique.c  CMakeLists.txt
Odevler/ders_odevleri/32_1_sort_names/: 32_1_sort_names.c  CMakeLists.txt
Odevler/ders_odevleri/36_1_insert_and_sort_names/: 36_1_insert_and_sort_names.c  CMakeLists.txt
